test/libsolidity/smtCheckerTests/types/address_staticcall.sol
pragma experimental SMTChecker;

contract C
{
	uint x;
	mapping (uint => uint) map;
	function f(address a, bytes memory data) public {
		x = 0;
		map[0] = 0;
		mapping (uint => uint) storage localMap = map;
		(bool success, bytes memory ret) = a.staticcall(data);
		assert(success);
		assert(x == 0);
		assert(map[0] == 0);
		assert(localMap[0] == 0);
	}
}
// ====
// EVMVersion: >spuriousDragon
// ----
// TypeError 6198: (244-256): Low-level calls are not supported in IELE. For more information, including potential workarounds, see README-IELE-SUPPORT.md
